--- a/src/conf/README
+++ b/src/conf/README
@@ -1,3 +1,5 @@
+Script SQL
+----------
 
 CREATE TABLE routes
 (
@@ -9,3 +11,37 @@ CREATE TABLE routes
 );
 
 
+Configuração de Conexão - Ex: <JBOSS7_HOME>/standalone/configuration/standalone.xml
+----------------------------------------------------------------------------------
+
+<datasource jndi-name="java:jboss/datasources/sharecarDS" pool-name="sharecarDS" enabled="true" use-java-context="true">
+    <connection-url>jdbc:postgresql://localhost:5432/sharecar</connection-url>
+    <driver>postgresql</driver>
+    <security>
+        <user-name>postgres</user-name>
+        <password>postgres</password>
+    </security>
+</datasource>
+
+<driver name="postgresql" module="org.postgresql">
+	<xa-datasource-class>org.postgresql.xa.PGXADataSource</xa-datasource-class>
+</driver>
+
+Instalação do Driver JDBC
+-------------------------
+1. Criar a estrutura de diretório: <JBOSS7_HOME>/modules/org/postgresql/main
+2. Download do driver JDBC em http://jdbc.postgresql.org/download.html (baixar o driver para a versão do seu PostgreSQL) 
+   e colocá-lo diretório criado acima 
+3. Criar o arquivo module.xml dentro do diretório criado no passo 1 com o conteúdo abaixo:
+
+<?xml version="1.0" encoding="UTF-8"?>
+<module xmlns="urn:jboss:module:1.0" name="org.postgresql">
+	<resources>
+		<resource-root path="postgresql-8.4-703.jdbc4.jar"/>
+	</resources>
+	<dependencies>
+		<module name="javax.api"/>
+		<module name="javax.transaction.api"/>
+	</dependencies>
+</module>
+ 
